@@ -1,3 +1,8 @@
+2005-04-29  Dave Korn <dave.korn@artimi.com>
+
+	* path.cc (getmntent): Add previously-omitted 'noexec' and 'managed'
+	flags to mnt_opts string if present in mount flags.
+
 2005-04-25  Christopher Faylor  <cgf@timesys.com>
 
 	* mount.cc (mount_commands): Display "-X" option when appropriate.
